# vsgvr

./: .gitmodules  CMakeLists.txt  LICENSE  example_novr.cpp  example_vr.cpp  main.cpp  rawmatrices.h  readme.md  submitopenvrcommand.h  updatevrvisitor.h  vsgvrConfig.cmake.in
examples/: CMakeLists.txt
examples/android-monado/: README.md
examples/android-monado/app/: AndroidManifest.xml  build.gradle
examples/android-monado/app/cpp/: main.cpp
examples/android-monado/app/debug/: output-metadata.json
examples/android-monado/app/release/: output-metadata.json
examples/composition_layer_quad/: CMakeLists.txt  game.cpp  game.h  interaction.h  main.cpp  ui.cpp  ui.h
examples/composition_layer_quad/interactions/: interaction_teleport.cpp
examples/features/common/: example_functions.cpp  example_main_desktop.cpp
examples/features/composition_layer_quad/: game.cpp  game.h  main.cpp
examples/features/composition_layer_quad/interactions/: interaction_teleport.cpp  interaction_teleport.h
examples/features/composition_layers/: CMakeLists.txt  game.cpp  game.h  main.cpp
examples/features/interaction_locomotion/: game.cpp  game.h  main.cpp
examples/features/interaction_locomotion/interactions/: interaction_slide.cpp  interaction_slide.h  interaction_teleport.h
examples/features/quest_composition_layer_quad/app/: build.gradle
examples/features/quest_interaction_locomotion/app/: AndroidManifest.xml
examples/game/: CMakeLists.txt  game.cpp  game.h  interaction.h  main.cpp
examples/game/interactions/: interaction_teleport.cpp  interaction_teleport.h
examples/generic/: CMakeLists.txt  main.cpp
examples/interaction_locomotion/: CMakeLists.txt  game.cpp  game.h  interaction.cpp  interaction.h  main.cpp
examples/interaction_locomotion/interactions/: interaction_example.cpp  interaction_example.h  interaction_slide.cpp  interaction_slide.h  interaction_teleport.cpp  interaction_teleport.h
examples/platform/android-monado/: README.md
examples/platform/android-monado/app/: AndroidManifest.xml
examples/platform/generic/: main.cpp
examples/quest/: README.md
examples/quest/app/: AndroidManifest.xml  build.gradle
examples/quest/app/cpp/: CMakeLists.txt  main.cpp
examples/quest_composition_layer_quad/app/: AndroidManifest.xml  build.gradle
examples/quest_composition_layer_quad/app/cpp/: CMakeLists.txt
examples/quest_interaction_locomotion/: .gitignore
examples/quest_interaction_locomotion/app/cpp/: CMakeLists.txt  main.cpp
examples/questnative/app/cpp/: CMakeLists.txt  controller.cpp  controller2.cpp  main.cpp
examples/vsgvrquestnative/: .gitignore  README.md
examples/vsgvrquestnative/app/: AndroidManifest.xml  build.gradle
examples/vsgvrquestnative/app/cpp/: CMakeLists.txt  main.cpp  world.cpp
tests/: CMakeLists.txt  test_openvr_extensions.cpp
vr/: CMakeLists.txt  controller.cpp  controller.h  device.cpp  device.h  env.cpp  env.h
vsgvr/: CMakeLists.txt
vsgvr/include/vsgvr/: CMakeCache.txt  Device.h  ExplicitProjectionMatrix.h  ExplicitViewMatrix.h  Interface.h  OpenXRCommon.h  OpenXREventHandler.h  OpenXRGraphicsBindingVulkan.h  OpenXRGraphicsBindingVulkan2.h  OpenXRInstance.h  OpenXRProjectionMatrix.h  OpenXRSession.h  OpenXRSwapchain.h  OpenXRTraits.h  OpenXRViewMatrix.h  OpenXRViewer.h  OpenXRVkDevice.h  OpenXRVkInstance.h  OpenXRVkPhysicalDevice.h  UpdateVRVisitor.h  VR.h  VRContext.h  VRController.h  VRDevice.h  VRProjectionMatrix.h  VRViewMatrix.h  VRViewer.h  vsgvr.h
vsgvr/include/vsgvr/actions/: Action.h  ActionPoseBinding.h  ActionSet.h  OpenXRAction.h  OpenXRActionPoseBinding.h  OpenXRActionSet.h  SpaceBinding.h
vsgvr/include/vsgvr/app/: CompositionLayer.h  CompositionLayer.h.bak  CompositionLayerProjection.h  CompositionLayerQuad.h  CompositionLayers.h  OpenXRViewer.h  UserOrigin.h  Viewer.h
vsgvr/include/vsgvr/extensions/: KHRCompositionLayerEquirect.h  KHRCompositionLayerEquirect2.h
vsgvr/include/vsgvr/imgui/: RenderImGui.h
vsgvr/include/vsgvr/openvr/: OpenVRContext.h
vsgvr/include/vsgvr/openxr/: OpenXR.h  OpenXRContext.h  OpenXREventHandler.h  OpenXRGraphicsBindingVulkan2.h  OpenXRInstance.h  OpenXRProjectionMatrix.h  OpenXRSession.h  OpenXRSwapchain.h  OpenXRTraits.h  OpenXRViewMatrix.h  OpenXRViewer.h  OpenXRVkDevice.h  OpenXRVkInstance.h  OpenXRVkPhysicalDevice.h  OpenXRWindow.h
vsgvr/include/vsgvr/openxrold/: OpenXRContext.h  OpenXRViewer.h  OpenXRWindow.h
vsgvr/include/vsgvr/xr/: AndroidTraits.h  Common.h  EventHandler.h  Exception.h  GraphicsBindingVulkan.h  Instance.h  OpenXRAndroidTraits.h  OpenXRCommon.h  OpenXREventHandler.h  OpenXRGraphicsBindingVulkan.h  OpenXRInstance.h  OpenXRProjectionMatrix.h  OpenXRSession.h  OpenXRSwapchain.h  OpenXRTraits.h  OpenXRViewMatrix.h  Pose.h  ProjectionMatrix.h  ReferenceSpace.h  Session.h  Swapchain.h  Traits.h  ViewMatrix.h
vsgvr/src/vsgvr/: OpenXREventHandler.cpp  OpenXRGraphicsBindingVulkan.cpp  OpenXRGraphicsBindingVulkan2.cpp  OpenXRInstance.cpp  OpenXRMacros.cpp  OpenXRSession.cpp  OpenXRSwapchain.cpp  OpenXRTraits.cpp  OpenXRViewer.cpp  OpenXRVkDevice.cpp  OpenXRVkInstance.cpp  OpenXRVkPhysicalDevice.cpp  UpdateVRVisitor.cpp  VR.cpp  VRContext.cpp  VRController.cpp  VRDevice.cpp  VRViewer.cpp
vsgvr/src/vsgvr/actions/: Action.cpp  ActionPoseBinding.cpp  ActionSet.cpp  OpenXRAction.cpp  OpenXRActionPoseBinding.cpp  OpenXRActionSet.cpp  SpaceBinding.cpp
vsgvr/src/vsgvr/app/: CompositionLayer.cpp  CompositionLayerProjection.cpp  CompositionLayerQuad.cpp  CompositionLayers.cpp  OpenXRViewer.cpp  UserOrigin.cpp  Viewer.cpp
vsgvr/src/vsgvr/extensions/: KHRCompositionLayerEquirect.cpp  KHRCompositionLayerEquirect2.cpp
vsgvr/src/vsgvr/imgui/: RenderImGui.cpp
vsgvr/src/vsgvr/openvr/: OpenVRContext.cpp  OpenVRViewer.cpp
vsgvr/src/vsgvr/openxr/: OpenXRContext.cpp  OpenXRContextFunctions.cpp  OpenXREventHandler.cpp  OpenXRGraphicsBindingVulkan2.cpp  OpenXRInstance.cpp  OpenXRMacros.cpp  OpenXRSession.cpp  OpenXRSwapchain.cpp  OpenXRTraits.cpp  OpenXRViewer.cpp  OpenXRVkDevice.cpp  OpenXRVkInstance.cpp  OpenXRVkPhysicalDevice.cpp  OpenXRWindow.cpp
(+84 files in other folders)
